--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,8 +8,8 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production && npm cache clean --force
+# Install ALL dependencies (including dev for build)
+RUN npm ci && npm cache clean --force
 
 # Copy source code
 COPY . .
