Add nixpacks config and fix dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist -l $PORT"
+  },
+  "dependencies": {
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "typescript": "~5.9.3",
