--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/luxon": "^3.7.1",
