--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,7 +15,8 @@ RUN npm ci
 COPY . .
 
 # Build the application with environment variables
-ARG VITE_API_BASE_URL=http://localhost:3000/api
+# Railway automatically passes environment variables as build args
+ARG VITE_API_BASE_URL
 ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 
 # Build TypeScript and Vite project
@@ -30,11 +31,7 @@ COPY nginx.conf /etc/nginx/nginx.conf
 # Copy built files from builder
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Create non-root user for security (nginx runs as nginx user by default)
-RUN addgroup -g 1001 -S nginx-user && \
-    adduser -S nginx-user -u 1001
-
-# Expose port
+# Expose port (Railway uses $PORT environment variable)
 EXPOSE 80
 
 # Health check
