Move class-transformer/validator to dependencies - needed at runtime

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -29,8 +29,8 @@ RUN apk add --no-cache dumb-init
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package*.json ./
 
-# Install only production dependencies
-RUN npm ci --only=production && npm cache clean --force
+# Install dependencies (including class-transformer/validator needed at runtime)
+RUN npm install --omit=dev && npm cache clean --force
 
 # Create non-root user for security
 RUN addgroup -g 1001 -S nodejs && \
