--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -9,9 +9,9 @@ services:
         VITE_API_BASE_URL: ${VITE_API_BASE_URL:-http://localhost:3000/api}
     container_name: calendar-booking-client
     ports:
-      - "5173:80"
+      - "80:80"
     environment:
-      - NODE_ENV=${NODE_ENV:-development}
+      - NODE_ENV=${NODE_ENV:-production}
     networks:
       - calendar-network
 
