--- a/client/nixpacks.toml
+++ b/client/nixpacks.toml
@@ -1,11 +1,2 @@
-[phases.setup]
-nixPkgs = ["nodejs_18"]
-
-[phases.install]
-cmds = ["npm ci"]
-
-[phases.build]
-cmds = ["npm run build"]
-
-[start]
-cmd = "npm start"
+# This file is not used - Railway is configured to use Dockerfile instead
+# See railway.json for build configuration
