vercel.json setup

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "client/dist",
+  "builds": [
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist",
+        "buildCommand": "npm run build"
+      }
+    }
+  ],
   "routes": [
     {
       "src": "/assets/(.*)",
